# OS-labs

./: .gitignore  README.md
Channel/: Channel.sln
Channel/Channel/: Channel.cpp  Channel.vcxproj  Channel.vcxproj.filters  buffered_chanel.h
KillerUser/Killer/: Killer.sln
KillerUser/Killer/Killer/: Killer.cpp  Killer.vcxproj
KillerUser/User/: User.sln
KillerUser/User/User/: User.cpp  User.vcxproj
KillerUserLinux/Killer/: main.cpp
KillerUserLinux/User/: main.cpp
Matrix/: main.cpp
Matrix_Lin/: main.cpp
Matrix_Win/: matrix_win.cpp
Number/: CMakeLists.txt  Number.cpp  Number.sln
Number/Number/: Number.cpp  Number.vcxproj
Pipes/A/: main.cpp
Pipes/M/: main.cpp
Pipes/Main/: main.cpp
Pipes/P/: main.cpp
Pipes/S/: main.cpp
Vector/: CMakeLists.txt  Vector.cpp  Vector.h  Vector.sln  main.cpp
Vector/Vector/: Vector.vcxproj
console/: build_file  main
console/Number/: Number.cpp  Number.h
console/Vector/: Vector.cpp  Vector.h
console/lab1console/: lab1.cpp
lab/: lab1.vcxproj
lab1/: lab1.sln
lab1/lab1/: lab1.cpp  lab1.vcxproj
lab1linux/: CMakeLists.txt  main.cpp
lab1linux/includes/: Vector.h
powershell/: build.ps1
powershell/Number/: Number.h
powershell/Vector/: Vector.cpp  Vector.h
powershell/lab1console/: lab1.cpp
